--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           bun-version: latest
       - name: Install deps
-        run: bun install --production --frozen-lockfile
+        run: bun install --frozen-lockfile
       - name: Build
         run: bun run build
       - name: Setup Pages
