--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "reactrouter": "npm:react-router-dom@^6.17.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -42,6 +42,9 @@
     "prettier": "3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "resolutions": {
+    "react-router-dom": "5.3.0"
   },
   "packageManager": "bun@1.0.6"
 }
